8/23/11 remove duplicate "do script" functionality from JmolViewerNode
8/23/11 add code (currently disabled) for "centered stage" transform strategy
8/23/11 pad rotate cursor with whitespace, so that it's 32x32, required by Windows
8/23/11 add major and minor tick marks to EN sliders
8/22/11 fix test program for EN sliders, change snap interval to 0.2
8/22/11 change bond color to dark gray, so that partial charges are still visible when they overlap bonds
8/22/11 position partial charge opposite molecular dipole for atom B in triatomic molecule
8/22/11 add view of partial charge for atom B in triatomic molecule (location is incorrect)
8/22/11 move computation of partial charges from bond to molecule, to handle atoms that participate in multiple bonds, lie atom B in triatomic molecule
8/22/11 prepare 2D isosurface by adding constructor args that will be needed for coloring
8/22/11 remove nodes related to surfaces from "Three Atoms" canvas
8/22/11 reverse order of colors in gradient specifications, to match Jmol naming conventions (negative-to-positive)
8/22/11 move gradient color specifications to MPColors, for reuse in 2D surfaces
# 0.00.16 (55638) Aug 22, 2011
8/22/11 dev version for discussion with KL
8/22/11 try another design for the Bond Type pointer, looks like a little bond [55631]
8/22/11 change request: redesign Bond Type indicator, move labels inside track, dual pointers above/below track [55629]
8/22/11 shorten max length of bond dipoles, so that vector tails don't run together for linear triatomic molecule
8/22/11 document our simplified relationship between deltaEN, bond dipole and partial charge
8/22/11 remove "more" from range labels on Bond Type indicator
8/22/11 use 31 colors for rainbow gradient, as shown for "Jmol roygb" at http://jmol.sourceforge.net/jscolors/#gradnt
8/22/11 remove surface features from "Three Atoms" tab, since we're creating molecules that are impossible to create surfaces for