@@ -10,7 +10,6 @@ HIGH
 - fix rotate cursor on Windows, it looks awful
 - clean up canvas layout code in all tabs, base layout on molecule location, use CenteredStage transform strategy
 - using CenteredStage transform strategy results in clipped label on "Electrostatic potential" check box
-- UnsupportedOperationException (Cannot normalize a zero-magnitude vector): "Two Atoms" tab; Atom A EN = more; Atom B EN = less; E-field = on; Reset All
 - implement 2D isosurface for diatomic molecule, with mep and electron density color schemes
 - Jmol: how to align molecular dipole with E-field?
 
